--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
             with:
               php-version: '8.2'
               extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
-              coverage: none
+              coverage: pcov
      
           - name: Run composer install
             run: composer install -n --prefer-dist
