--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,10 @@ jobs:
         steps:
           - uses: actions/checkout@v3
      
-          - name: Setup PHP
+          - name: Setup PHP with pcov
             uses: shivammathur/setup-php@v2
             with:
               php-version: '8.2'
-              extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
               coverage: pcov
      
           - name: Run composer install
@@ -30,5 +29,5 @@ jobs:
               cp .env.ci .env
               php artisan key:generate
      
-          - name: Run tests
-            run: php artisan test
+          - name: Run tests with phpunit/phpunit
+            run: vendor/bin/phpunit --coverage-clover=coverage.xml
